--- a/C1/W2/ungraded_labs/C1_W2_Lab_2_callbacks.ipynb
+++ b/C1/W2/ungraded_labs/C1_W2_Lab_2_callbacks.ipynb
@@ -149,6 +149,15 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "# New Section"
+      ],
+      "metadata": {
+        "id": "ZucocGxCbn-_"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "fGBSkRQPff93"
       },
